--- a/styles/Play.module.css
+++ b/styles/Play.module.css
@@ -1,5 +1,7 @@
 .container {
   padding: 0 2rem;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .main {
@@ -41,8 +43,9 @@
 
 .title {
   margin: 0;
+  margin-bottom: 20px;
   line-height: 1.15;
-  font-size: 4rem;
+  font-size: 2rem;
 }
 
 .title,
@@ -56,21 +59,19 @@
   font-size: 1.5rem;
 }
 
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+.grid {
+  display: grid;
+  grid-template-rows: repeat(6, 1fr);
+  grid-gap: 5px;
+  padding: 10px;
+  box-sizing: border-box;
+  width: 40vh;
 }
 
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
+.row {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 5px;
 }
 
 .card {
@@ -82,8 +83,7 @@
   border: 1px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
-  width: 40ch;
-  height: 15rem;
+  max-width: 300px;
 }
 
 .card:hover,
@@ -93,15 +93,42 @@
   border-color: #701070;
 }
 
+.card h2 {
+  margin: 0 0 1rem 0;
+  font-size: 1.5rem;
+}
+
 .card p {
   margin: 0;
   font-size: 1.25rem;
   line-height: 1.5;
 }
 
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
+.keyboard {
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  grid-gap: 5px;
+  padding: 10px;
+  box-sizing: border-box;
+  width: 40vh;
+}
+
+.topRow {
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  grid-gap: 3px;
+}
+
+.middleRow {
+  display: grid;
+  grid-template-columns: repeat(9, 1fr);
+  grid-gap: 3px;
+}
+
+.bottomRow {
+  display: grid;
+  grid-template-columns: repeat(9, 1fr);
+  grid-gap: 3px;
 }
 
 .logo {
